[package]
name = "rdog"
version = "0.1.0"
edition = "2021"
description = "A simple library to download files from the internet"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }